--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -6,6 +6,6 @@ html body.home div#wrapper footer#footer.col-full div#credit.col-right {
 }
 
 html body.home div#wrapper footer#footer.col-full, div#copyright.col-left p, div#credit.col-right a {
-    color: #FFFFFF;
+    color: $text_dark;
     font-weight: bold;
 	}
