--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -10,14 +10,14 @@
  }
 
 #header-wrap {
-	height:234px;
+	//height:234px;
 	border:none;
 	background-color:transparent !important;
 	padding:0;
 }
 
 #header #logo {
-	background:url(images/logo-bicycle-rocker.png) no-repeat left top;
+	background:url(images/sp_logo_2015_web.svg) no-repeat left top;
 	width:333px;
 	height:178px;
 	display:block;
