--- a/scss/_sidebar.scss
+++ b/scss/_sidebar.scss
@@ -83,8 +83,8 @@ div.primary div#gform_widget-2.widget div#gform_wrapper_1 div.gform_body ul#gfor
 }
 
 div.primary div#gform_widget-2.widget div#gform_wrapper_1 {
-    background-color: rgba(0, 0, 0, 0.3);
-    border: 1px solid #201F1F;
+    background-color: rgba(0, 0, 0, 0.1);
+    border: 1px solid $border_dark;
     border-radius: 4px 4px 4px 4px;
     -webkit-border-radius: 4px 4px 4px 4px;
     -moz-border-radius: 4px 4px 4px 4px;
