--- a/scss/_misc.scss
+++ b/scss/_misc.scss
@@ -20,3 +20,14 @@ a.button, a.comment-reply-link, #commentform #submit, .submit, input[type="submi
 	-moz-text-shadow:0px -1px 0 rgba(0, 0, 0, 0.3);
 	-webkit-text-shadow:0px -1px 0 rgba(0, 0, 0, 0.3);		
 }
+
+.flexslider .slides .slide {
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  border: 1px solid $border_dark;
+  box-shadow: 0px -1px 0px 0px #3b3a3a;
+  -webkit-box-shadow: 0px -1px 0px 0px #3b3a3a;
+  -moz-box-shadow: 0px -1px 0px 0px #3b3a3a;
+  -o-box-shadow: 0px -1px 0px 0px #3b3a3a;
+}
