--- a/scss/_navigation.scss
+++ b/scss/_navigation.scss
@@ -2,13 +2,18 @@
 #navigation .nav a {
     color: #FFFFFF;
     font: 22px/1.4em 'Fugaz One',arial,sans-serif;
-	text-shadow: 1px 2px 0px #18516A;
+	//text-shadow: 1px 2px 0px #18516A;
     padding: 5px 0.75em;
+    -webkit-transition: all 300ms ease-in-out;
+	-moz-transition: all 300ms ease-in-out;
+	-ms-transition: all 300ms ease-in-out;
+	-o-transition: all 300ms ease-in-out;
+	transition: all 300ms ease-in-out;
 	}
 
 #navigation .nav a:hover{
 	color:#7A1717;
-	text-shadow: 1px 2px 0px #221F21;
+	//text-shadow: 1px 2px 0px #221F21;
 }
 
 #navigation {
