--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,7 +10,7 @@ Updated: 3/26/15
 */
 
 
-/*@import url("../unsigned/style.css");*/
+@import url("../unsigned/style.css");
 /* CSS Document */
 
 /******* Color definitions 
@@ -22,7 +22,7 @@ red gradient: goes from #7A1717 to #B62323
 
 */
 
-@import 'unsigned',
+@import 
 		'colors',
 		'background',
 		'header',
