--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -28,82 +28,30 @@
 }
 
 #social {
-	Xwidth:180px;
 	height:25px;
 	display:block;
-	Xbackground:url(images/social-sprite.png) top;
 	top:0;
 	float:right;
-}
+	a {
+		&:hover {
+			text-decoration:none;
+		}
 
-#social:hover {
-	Xbackground:url(images/social-sprite.png) center 49px;
+		i.social-icon {
+			font-size: 22px;
+			margin-left: 5px;
+			color: $light_tan;
+			-webkit-transition: all 300ms ease-in-out;
+			-moz-transition: all 300ms ease-in-out;
+			-ms-transition: all 300ms ease-in-out;
+			-o-transition: all 300ms ease-in-out;
+			transition: all 300ms ease-in-out;
+			&:hover {
+				color:$red;
+			}
+		}
+	}
 }
-	
-#social:active {
-	Xbackground-position:bottom;
-}
-
-#social div {
-	float:left;
-	height:25px;
-	display:block;
-}
-
-#social div.fb {
-	background:url(images/social-sprite.png) left top;
-	width:35px;
-}
-	
-#social div.fb:hover {
-	background-position: 0 49px;
-}
-	
-#social div.fb:active {
-	background-position:0 100px;
-}
-
-#social div.twitter {
-	background:url(images/social-sprite.png) 144px  top;
-	width:40px;
-}
-	
-#social div.twitter:hover {
-	background-position: 144px 49px;
-}
-	
-#social div.twitter:active {
-	background-position:144px 100px;
-}
-
-
-#social div.youtube {
-	background:url(images/social-sprite.png) 100px  top;
-	width: 55px;
-	margin-right: 4px;
-}
-	
-#social div.youtube:hover {
-	background-position: 100px 49px;
-}
-	
-#social div.youtube:active {
-	background-position:100px 100px;
-}
-
-#social div.email {
-	background:url(images/social-sprite.png) 40px  top;
-	width:40px;
-}
-	
-#social div.email:hover {
-	background-position: 40px 49px;
-}
-	
-#social div.email:active {
-	background-position:40px 100px;
-}
-
 
 .GBLikeButton {
 	float:right;
@@ -121,3 +69,53 @@
     padding: 20px 0 10px;
     position: relative;
 }
+
+/* 2. MAIN NAVIGATION DROPDOWN MENUS */
+@media only screen and (min-width: 768px) {
+
+	#header #navigation #main-nav.nav li ul {
+	    margin: 0 0 0 -1px;
+	    position: absolute;
+	    width: 180px;
+	    z-index: 999;
+
+	    border: none !important;
+	    background: transparent;
+
+	    &.sf-sub-indicator {
+	    background: url(../images/arrow-superfish-right.png) no-repeat;
+	    top: 38%;
+
+		li a {
+		    color: $link_color !important;
+		    font-family: "Brothers", serif;
+		    text-shadow: 0;
+		    border-bottom: none !important;
+
+		    padding: 10px 15px;
+		    width: 150px;
+		    background: none;
+		    font-size: 0.8em;
+
+			}
+
+			&:hover {
+				text-decoration: underline;
+				background: none;
+				color: #871a1a;
+			}
+		}
+	}
+}
+
+  #navigation .nav li ul li.current_page_item a,
+  #navigation .nav li ul li.current_page_parent a,
+  #navigation .nav li ul li.current-menu-ancestor a,
+  #navigation .nav li ul li.current-cat a,
+  #navigation .nav li ul li.li.current-menu-item a,
+  #navigation .nav li ul li.sfHover a {
+    background: none;
+  }
+  #navigation .nav li ul ul {
+    margin: -37px 0 0 160px;
+  }
