switched name of font to lowercase to debug

--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -1,12 +1,12 @@
 
 @font-face {
     font-family: 'brothers';
-    src: url('fonts/Brothers.eot');
-    src: url('fonts/Brothers.eot?#iefix') format('embedded-opentype'),
-         url('fonts/Brothers.woff2') format('woff2'),
-         url('fonts/Brothers.woff') format('woff'),
-         url('fonts/Brothers.ttf') format('truetype'),
-         url('fonts/Brothers.svg#brothers') format('svg');
+    src: url('fonts/brothers.eot');
+    src: url('fonts/brothers.eot?#iefix') format('embedded-opentype'),
+         url('fonts/brothers.woff2') format('woff2'),
+         url('fonts/brothers.woff') format('woff'),
+         url('fonts/brothers.ttf') format('truetype'),
+         url('fonts/brothers.svg#brothers') format('svg');
     font-weight: normal;
     font-style: normal;
 }
