--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,4 @@
-/*
+/*!
 Theme Name: Scott Pemberton
 Theme URI: http://www.woothemes.com/2012/01/unsigned/
 Description: A child theme of WooThemes Unsigned.
@@ -7,7 +7,7 @@ Author: Gray Ayer
 Author URI: http://www.studiok40.com
 Version: 2.0
 Updated: 3/26/15
-*/
+!*/
 
 
 @import url("../unsigned/style.css");
