adding font awesome to child theme
hopefully we can avoid the non display of the font on the homepage for
mobile devices through this mechanism.

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -28,6 +28,7 @@ red gradient: goes from #7A1717 to #B62323
 		'header',
 		'navigation',
 		'typography',
+		'font-awesome',
 		'sidebar',
 		'misc',
 		'footer',
