--- a/scss/_homepage.scss
+++ b/scss/_homepage.scss
@@ -9,9 +9,17 @@ ul.video-thumbnails {display: none;}
 }
 */
 
+.flexslider {
+	.slides img.alignleft {
+		padding: 0 15px 15px 0;
+	}
 
-.flexslider .slides img.alignleft {
-	padding: 0 15px 15px 0;
+	/* Hide the slides before the JS is loaded. Avoids image jumping */
+	 .slides img {
+	  max-width: 100%;
+	  display: block;
+	  height: auto;
+	}
 }
 
 .slide { 
