--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -18,6 +18,7 @@ a.mobile_header_title {
 	  }
   }
 
+
 @media only screen and (max-width: 320px) {
 	a.mobile_header_title {
 		font-size: 24px;
@@ -48,6 +49,12 @@ a.mobile_header_title {
 		float: none;
 		margin: 0 auto 1em;
 		display: table;
+	}
+
+	/*fit vids responsive video override */
+	.fluid-width-video-wrapper iframe {
+	  height: auto !important;
+	  width: 100% !important;
 	}
 
 }
