--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -5,17 +5,17 @@ a.mobile_header_title {
   text-transform: uppercase;
   font-size: 28px;
   color: $orange !important;
-  //text-shadow: 1px 1px 0px $light_tan;
+  text-shadow: 1px 1px 0px $light_tan;
   position: relative;
   background: transparent;
-  z-index: 0;
+ /* z-index: 0;
 	  &:before {
 	  	content: 'SCOTT PEMBERTON';
 	  	position: absolute;
 	  	-webkit-text-stroke: 2.5px $light_tan;
 	  	left: 0;
 	  	z-index: -1;
-	  }
+	  }*/
   }
 
 
