update message for git deploy script test

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,7 @@
 /*!
 Theme Name: Scott Pemberton
 Theme URI: http://www.woothemes.com/2012/01/unsigned/
-Description: A child theme of WooThemes Unsigned.
+Description: A child theme of WooThemes Unsigned, no longer supported unfortunately.
 Template: unsigned
 Author: Gray Ayer
 Author URI: http://www.studiok40.com
